[package]
name = "heroku-cli-neon-hello-world"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "heroku_cli_neon_hello_world"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.19"

[dependencies]
neon = "0.1.19"

[replace]
"neon-runtime:0.1.19" = { git = "https://github.com/neon-bindings/neon" }
"neon-build:0.1.19" = { git = "https://github.com/neon-bindings/neon" }
